Lots of content updates

--- a/fyn.html
+++ b/fyn.html
@@ -31,8 +31,10 @@
     
     <header class="header ibm grid grid--2 grid-gap--32">
       <div class="logo">
-        <img src="images/me.jpg" class="logo--img" />
-        made by <strong>Jeff</strong>
+        <a href="index.html">
+          <img src="images/me.jpg" class="logo--img" />
+          made by <strong>Jeff</strong>
+        </a>
       </div>
       <nav class="nav">
         <a href="#work" class="nav--link">work</a>
