--- a/healme.html
+++ b/healme.html
@@ -31,8 +31,10 @@
     
     <header class="header ibm grid grid--2 grid-gap--32">
       <div class="logo">
-        <img src="images/me.jpg" class="logo--img" />
-        made by <strong>Jeff</strong>
+        <a href="index.html">
+          <img src="images/me.jpg" class="logo--img" />
+          made by <strong>Jeff</strong>
+        </a>
       </div>
       <nav class="nav">
         <a href="index.html#work" class="nav--link">work</a>
@@ -50,15 +52,15 @@
         </a>
 
         <h3 class="heading heading--intro ibm mar-bot--32">Heal.me</h3>
-        <h1 class="heading xl ibm mar-bot--32">Simpler workflows, better tools</h1>
+        <h1 class="heading xl ibm mar-bot--32">Simpler workflows, better tools, more bookings.</h1>
         <ul class="tldr body ibm mar-bot--32">
           <li>Increasing bookings &amp; customer activations 20% MOM</li>
           <li>Increasing revenue 15% MOM</li>
           <li>Increasing customer adoption 20% MOM</li>
-          <li>Lead strategy, research, and design for new features (0-1 🚀)</li>
+          <li>Lead strategy, research, and design for new features (0-1)</li>
         </ul>
         <div class="body no-decoration">
-          <p>Heal.me is an all-in-one toolkit for holistic practitioners to run their businesses. It&rsquo;s a marketplace for clients to explore and book with thousands of practioners. I&rsquo;ve been leading the design and product efforts to drive more adoption of the saas product while improving the SEO and UX flows for more clients to book flawlessly.</p>
+          <p>Heal.me is an all-in-one toolkit for holistic practitioners to run their businesses. It&rsquo;s <em>also</em> a marketplace for clients to explore and book with thousands of practioners. I&rsquo;ve been leading the design and product efforts to drive more adoption of the saas product while improving the SEO and UX flows for more clients to book flawlessly.</p>
           <hr class="designy" />
           <div class="body--sm">
             <p><strong>Case Study:</strong></p>
