--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title dir="ltr">made by Jeff | Denver-based nerd, product & growth designer, and front-end tinkerer.</title>
-    <meta name="description" content="The web sandbox of Jeff Doan; my work, my musings on product design, email design, and other web-related thingamajigs." />
+    <title dir="ltr">Jeff Doan | I’m a product, growth, and business designer that loves using technology for good.</title>
+    <meta name="description" content="My collection of work, musings on product design, email design, and other web-related thingamajigs." />
 
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
-    <meta property='og:description' content='The web sandbox of Jeff Doan; my work, my musings on product design, email design, and other web-related thingamajigs.' />
+    <meta property='og:description' content='My collection of work, musings on product design, email design, and other web-related thingamajigs.' />
     <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
@@ -45,7 +45,10 @@
     <main class="container">
       
       <div class="hero">
-        <h1 class="heading xl ibm mar-bot--32">I design for where people, strategy, product, marketing, data, and technology meet.</h1>
+        <h1 class="heading xl ibm mar-bot--32">
+          <!-- I design for where people, strategy, product, marketing, data, and technology meet. -->
+          I’m a product, growth, and business designer that loves using technology for good.
+        </h1>
         <p class="body mar-bot--32">I enjoy designing for conversion, driving customer & business value, optimizing onboarding to be effective, and simplifying pains with better tooling. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p>
         <p class="body">I’ve helped businesses reduce churn, increase trial &amp; paid sign ups, optimize feature adoption, set up research &amp; testing processes, create feedback loops, and more. <em>How can I help your business?</em></p>
       </div>
@@ -197,7 +200,7 @@
           I’m a product designer that solves customer and business problems with simple, efficient tooling, and I excel at taking an idea from 0 to usable thing. I have 16+ years of UX/UI design, product, and development experience (HTML, CSS, JavaScript, Ruby on Rails, PHP). In my career, I’ve worked across B2C, B2B, SaaS, and mental health.
         </h2>
         <h3 class="heading--lite ibm body mar-bot--40">
-          I have a passion for using technology to do good, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
+          I craft 0-1 experiences and wear many hats to do so, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
         </h3>
         <div class="links mar-bot--80 ibm">
           <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank" class="btn">LinkedIn</a>
