--- a/index.html
+++ b/index.html
@@ -54,21 +54,25 @@
       </div>
 
       <div class="work" id="work">
-        <h3 class="heading heading--intro ibm mar-bot--32">Recent work</h3>
-        <div class="work--row mar-bot--32">
+        <h3 class="heading heading--intro ibm mar-bot--32">Selected work</h3>
+        <div class="work--row grid grid--2 grid-gap--32 mar-bot--32">
           <a href="healme.html" class="work--item healme">
             <img src="images/logos/healme.svg" height="80" />
-            <span class="badge">Optimizations/Growth</span>
+            <span class="badge">SaaS/Design Systems</span>
+          </a>
+          <a href="healme--app.html" class="work--item healme">
+            <img src="images/logos/healme.svg" height="80" />
+            <span class="badge">Mobile app</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="thriveworks.html" class="work--item tw">
             <img src="images/logos/thriveworks.svg" />
-            <span class="badge">Optimizations</span>
+            <span class="badge">SaaS/Design Systems</span>
           </a>
           <a href="tradesy.html" class="work--item">
             <img src="images/logos/tradesy.svg" />
-            <span class="badge">Self-service</span>
+            <span class="badge">Marketplace</span>
           </a>
         </div>
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
@@ -84,109 +88,16 @@
         <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
           <a href="sp-onboarding.html" class="work--item sys">
             <img src="images/logos/simplepractice.svg" />
-            <span class="badge">Onboarding/Growth</span>
+            <span class="badge">Growth</span>
           </a>
           <a href="tradesy-m.html" class="work--item">
             <img src="images/logos/tradesy.svg" />
             <span class="badge">Mobile web</span>
           </a>
         </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="highrise.html" class="work--item">
-            <img src="images/logos/highrise.svg" />
-            <span class="badge">Design challenge</span>
-          </a>
-          <a href="leagueapps.html" class="work--item">
-            <img src="images/logos/leagueapps.svg" />
-            <span class="badge">Mobile web</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="blc.html" class="work--item blc">
-            <img src="images/logos/bandloveclub.svg" />
-            <span class="badge">Side project</span>
-          </a>
-          <a href="myperfectjob.html" class="work--item mpj">
-            <img src="images/logos/myperfectjob.svg" />
-            <span class="badge">Side project</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="systemic.html" class="work--item sys">
-            <img src="images/logos/systemic.svg" />
-            <span class="badge">Side project</span>
-          </a>
-          <a href="sw.html" class="work--item sw">
-            <img src="images/logos/saasweekly.svg" />
-            <span class="badge">Sold 💰</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--2 grid-gap--32">
-          <a href="fyn.html" class="work--item fyn">
-            <img src="images/logos/fyn.svg" />
-            <span class="badge">Sold 💰</span>
-          </a>
-          <a href="https://wtf.jefff.co/getbetalist/" target="_blank" class="work--item bl">
-            <img src="images/logos/betalist.svg" />
-            <!-- Betalist
-            <span class="desc">Test with <em>your</em> customers</span> -->
-            <span class="badge">Side project</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--3 grid-gap--32 ibm body">
-          <a href="https://wtf.jefff.co/coverbetter/" target="_blank" class="work--item mini">
-            CoverBetter
-            <span class="desc">A re-usable cover letter</span>
-            <span class="badge">Free tool</span>
-          </a>
-          <a href="https://wtf.jefff.co/progoogle/" target="_blank" class="work--item mini">
-            Pro-Googlin’
-            <span class="desc">How to search better</span>
-            <span class="badge">Free tool</span>
-          </a>
-          <a href="https://wtf.jefff.co/interactible/" target="_blank" class="work--item mini">
-            Interactibles
-            <span class="desc">Better interactions for webs</span>
-            <span class="badge">Free tool</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--32 grid grid--3 grid-gap--32 ibm body">
-          <a href="https://medium.com/@jefffis/spara-an-atm-for-kids-4c30760e05f9" target="_blank" class="work--item mini">
-            Spara
-            <span class="desc">An ATM for Kids</span>
-            <span class="badge">Article</span>
-          </a>
-          <a href="https://medium.com/@jefffis/pricing-page-updates-7faf76ecd0ba" target="_blank" class="work--item mini">
-            Pricing updates
-            <span class="desc">Design challenge</span>
-            <span class="badge">Article</span>
-          </a>
-          <a href="https://medium.com/@jefffis/death-to-the-hamburger-56767d96ca59" target="_blank" class="work--item mini">
-            Death to the 🍔
-            <span class="desc">Musings on UI</span>
-            <span class="badge">Article</span>
-          </a>
-        </div>
-        <div class="work--row mar-bot--80 grid grid--3 grid-gap--32 ibm body">
-          <a href="https://medium.com/@jefffis/death-to-the-modals-870223a453d9" target="_blank" class="work--item mini">
-            Death to the modals
-            <span class="desc">Musings on UI</span>
-            <span class="badge">Article</span>
-          </a>
-          <a href="https://medium.com/@jefffis/give-a-shit-design-designers-are-killing-the-web-378772ea696d" target="_blank" class="work--item mini">
-            Give a shit #1
-            <span class="desc">Designers killin&rsquo; the web</span>
-            <span class="badge">Article</span>
-          </a>
-          <a href="https://medium.com/@jefffis/give-a-shit-how-to-not-lose-focus-8a71e96efe89" target="_blank" class="work--item mini">
-            Give a shit #2
-            <span class="desc">How to not lose focus</span>
-            <span class="badge">Article</span>
-          </a>
-        </div>
         <div class="more-context">
-          <a href="more/index.html">
-            View more (old portfolio)
+          <a href="all-work.html" class="btn btn--black ibm">
+            See all
           </a>
         </div>
       </div>
@@ -206,7 +117,7 @@
           <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank" class="btn">LinkedIn</a>
           <a href="https://github.com/jefffis?tab=repositories" target="_blank" class="btn">GitHub</a>
           <a href="https://www.producthunt.com/@jefffis" target="_blank" class="btn">ProductHunt</a>
-          <a href="https://www.indiehackers.com/jefff/history" target="_blank" class="btn">Indiehackers</a>
+          <a href="https://www.indiehackers.com/jefff" target="_blank" class="btn">Indiehackers</a>
           <a href="https://www.instagram.com/jefffff/" target="_blank" class="btn">Instagram</a>
           <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="btn">Email</a>
         </div>
@@ -233,8 +144,9 @@
             <li>Figma &amp; Storybook</li>
             <li>HTML/CSS/JavaScript</li>
             <li>Ruby/Rails/PHP</li>
+            <li>ChatGPT</li>
             <li>Scrappy/making sh*t happen</li>
-            <li>being a music snob</li>
+            <!-- <li>being a music snob</li> -->
           </ul>
         </div>
         <div id="my-resume" class="my-resume">
