start updating portfolio with work samples

--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
         made by <strong>Jeff</strong>
       </div>
       <nav class="nav">
-        <a href="#work" class="nav--link">work</a>
-        <a href="#about" class="nav--link">about</a>
-        <a href="#my-resume" class="nav--link">résumé</a>
-        <a href="#reviews" class="nav--link">reviews</a>
+        <div class="nav--wrapper">
+          <a href="#work" class="nav--link nav--link-title" data-subtitle="Case Studies & mo." data-subtitle-sm="(Case Studies & mo.)">selected work</a>
+          <a href="#samples" class="nav--link nav--link-title" data-subtitle="Figma links" data-subtitle-sm="(Figma links)">samples</a>
+          <a href="#about" class="nav--link">about</a>
+          <a href="#my-resume" class="nav--link">résumé</a>
+          <a href="#reviews" class="nav--link">reviews</a>
+        </div>
       </nav>
     </header>
     
@@ -98,6 +101,27 @@
         <div class="more-context">
           <a href="all-work.html" class="btn btn--black ibm">
             See all
+          </a>
+        </div>
+      </div>
+
+      <div class="work" id="samples">
+        <h3 class="heading heading--intro ibm mar-bot--32">Samples</h3>
+        <div class="work--row mar-bot--32 grid grid--3 grid-gap--32 ibm body">
+          <a href="https://wtf.jefff.co/coverbetter/" target="_blank" class="work--item mini">
+            CoverBetter
+            <span class="desc">A re-usable cover letter</span>
+            <span class="badge">Prototype</span>
+          </a>
+          <a href="https://wtf.jefff.co/progoogle/" target="_blank" class="work--item mini">
+            Pro-Googlin’
+            <span class="desc">How to search better</span>
+            <span class="badge">Prototype</span>
+          </a>
+          <a href="https://wtf.jefff.co/interactible/" target="_blank" class="work--item mini">
+            Interactibles
+            <span class="desc">Better interactions for webs</span>
+            <span class="badge">Figma link</span>
           </a>
         </div>
       </div>
