--- a/tradesy.html
+++ b/tradesy.html
@@ -37,10 +37,13 @@
         </a>
       </div>
       <nav class="nav">
-        <a href="index.html#work" class="nav--link">work</a>
-        <a href="index.html#about" class="nav--link">about</a>
-        <a href="index.html#my-resume" class="nav--link">résumé</a>
-        <a href="index.html#reviews" class="nav--link">reviews</a>
+        <div class="nav--wrapper">
+          <a href="index.html#work" class="nav--link nav--link-title" data-subtitle="Projects & results" data-subtitle-sm="(Projects & results)">selected work</a>
+          <a href="index.html#samples" class="nav--link nav--link-title" data-subtitle="Figma links" data-subtitle-sm="(Figma links)">samples</a>
+          <a href="index.html#about" class="nav--link">about</a>
+          <a href="index.html#my-resume" class="nav--link">résumé</a>
+          <a href="index.html#reviews" class="nav--link">reviews</a>
+        </div>
       </nav>
     </header>
     
