--- a/fyn.html
+++ b/fyn.html
@@ -67,9 +67,14 @@
 
     <footer class="footer">
       <div class="container">
-        <h4 class="heading ibm micro">
+        <h4 class="heading mar-bot--16 micro">
           © jefff.co
         </h4>
+        <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank">LinkedIn</a>
+        <a href="https://github.com/jefffis?tab=repositories" target="_blank">GitHub</a>
+        <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
+        <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
+        <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
       </div>
     </footer>
 
