--- a/sw.html
+++ b/sw.html
@@ -37,13 +37,9 @@
         </a>
       </div>
       <nav class="nav">
-        <div class="nav--wrapper">
-          <a href="index.html#work" class="nav--link nav--link-title" data-subtitle="Projects & results" data-subtitle-sm="(Projects & results)">selected work</a>
-          <a href="index.html#samples" class="nav--link nav--link-title" data-subtitle="Figma links" data-subtitle-sm="(Figma links)">samples</a>
-          <a href="index.html#about" class="nav--link">about</a>
-          <a href="index.html#my-resume" class="nav--link">résumé</a>
-          <a href="index.html#reviews" class="nav--link">reviews</a>
-        </div>
+        <a href="index.html#work" class="nav--link">Work</a>
+        <a href="#about" class="nav--link">About</a>
+        <a href="#my-resume" class="nav--link">Résumé</a>
       </nav>
     </header>
     
@@ -70,9 +66,14 @@
 
     <footer class="footer">
       <div class="container">
-        <h4 class="heading ibm micro">
+        <h4 class="heading mar-bot--16 micro">
           © jefff.co
         </h4>
+        <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank">LinkedIn</a>
+        <a href="https://github.com/jefffis?tab=repositories" target="_blank">GitHub</a>
+        <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
+        <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
+        <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
       </div>
     </footer>
 
