More commits for new UI

--- a/tradesy.html
+++ b/tradesy.html
@@ -30,16 +30,11 @@
   <body>
     
     <header class="header ibm grid grid--2 grid-gap--32">
-      <div class="logo">
-        <a href="index.html">
-          <img src="images/me.jpg" class="logo--img" />
-          made by <strong>Jeff</strong>
-        </a>
-      </div>
+      <a href="index.html"><img src="images/me--new.jpg" class="logo--img" alt="Jeff Doan, product designer and web maker." /></a>
       <nav class="nav">
-        <a href="index.html#work" class="nav--link">Work</a>
-        <a href="#about" class="nav--link">About</a>
-        <a href="#my-resume" class="nav--link">Résumé</a>
+        <a href="about.html" class="nav--link">About</a>
+        <a href="jeff-doan-resume--2024.pdf" target="_blank" class="nav--link">Résumé</a>
+        <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link">Contact</a>
       </nav>
     </header>
     
@@ -80,17 +75,19 @@
     </div>
 
     <footer class="footer">
-      <div class="container">
-        <h4 class="heading mar-bot--16 micro">
-          © jefff.co
-        </h4>
-        <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank">LinkedIn</a>
-        <a href="https://github.com/jefffis?tab=repositories" target="_blank">GitHub</a>
-        <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
-        <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
-        <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
-      </div>
-    </footer>
+        <div class="container">
+          <h4 class="heading mar-bot--16 micro">
+            © jefff.co
+          </h4>
+          <div class="links">
+            <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank">LinkedIn</a>
+            <a href="https://github.com/jefffis?tab=repositories" target="_blank">GitHub</a>
+            <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
+            <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
+            <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
+          </div>
+        </div>
+      </footer>
 
     <script>
       var back_button = document.querySelector('.btn--back');
