--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
         <!--/ work -->
 
         <!-- work -->
-        <a class="work-item">
+        <a class="work-item soon">
           <h2>Director of Growth Design, SimplePractice</h2>
-          <p>Redesign and relaunched marketing site, increased paid accounts by 25%, increased trial sign ups by 15%, and increased lead-gen by 30%.</p>
-          <img src="images/healme--calendar.png" />
+          <p>Redesign and relaunched marketing site, increased paid accounts by 25%, increased trial sign ups by 15%, and increased lead-gen by 30%. (coming soon)</p>
+          <img src="more/img/sp/sp.com--new.jpg" />
         </a>
         <!--/ work -->
 
         <!-- work -->
-        <a class="work-item">
+        <a class="work-item soon">
           <h2>Lead Product Designer, Thriveworks</h2>
-          <p>Increased first-session show rate 30%, decreased client cancels by 8%, decreased insurance billing issues 20%, and reduced clinician churn by 21%.</p>
-          <img src="images/healme--calendar.png" />
+          <p>Increased first-session show rate 30%, decreased client cancels by 8%, decreased insurance billing issues 20%, and reduced clinician churn by 21%. (coming soon)</p>
+          <img src="images/tc-dashboard.png" />
         </a>
         <!--/ work -->
 
@@ -84,16 +84,16 @@
         
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
-          <a class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=105%3A198&type=design&node-id=6065-22297&viewport=306%2C260%2C0.03&t=jKowwjcvOX6WBatE-8&scaling=scale-down&starting-point-node-id=6065%3A22297&show-proto-sidebar=1&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Mobile web</h2>
-            <p>Figma prototype</p>
+            <p>Marketplace redesign for clients (prototype)</p>
             <img src="images/new-work/image-healme-marketplace-mobile.png" />
           </a>
           <!--/ work -->
           <!-- work -->
-          <a class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=1047%3A280&type=design&node-id=1047-568&viewport=535%2C642%2C0.11&t=FQDMGZ9YRZBersp6-8&scaling=scale-down&starting-point-node-id=1047%3A568&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Booking Widget</h2>
-            <p>Figma prototype</p>
+            <p>Embeddable widget to add seamless booking (prototype)</p>
             <img src="images/new-work/image-booking-widget.png" />
           </a>
           <!--/ work -->
@@ -101,16 +101,16 @@
 
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
-          <a class="work-item work-item--grid">
+          <a href="https://www.figma.com/file/rk8MW28mTezXDMFgtvqWFu/Misc-design-work?type=design&node-id=303%3A174&mode=design&t=Co8c7gLLkhSO21dR-1" target="_blank" class="work-item work-item--grid">
             <h2>Thriveworks: Service Blueprints</h2>
-            <p>Figma artboart</p>
+            <p>Customer journey map (Figma)</p>
             <img src="images/new-work/image-blueprints.png" />
           </a>
           <!--/ work -->
           <!-- work -->
-          <a class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=105%3A198&type=design&node-id=4632-15119&viewport=306%2C260%2C0.03&t=jKowwjcvOX6WBatE-8&scaling=scale-down&starting-point-node-id=4632%3A15119&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>Heal.me: Mobile app</h2>
-            <p>Figma prototype</p>
+            <p>All-in-one practice toolkit (prototype)</p>
             <img src="images/new-work/image-healme-mobile-app.png" />
           </a>
           <!--/ work -->
@@ -118,69 +118,56 @@
 
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
-          <a class="work-item work-item--grid">
+          <a href="https://www.figma.com/proto/ZcUE8PQgAcTRQqMHI6JXDn/BandLoveClub?page-id=0%3A1&type=design&node-id=1-2&viewport=396%2C507%2C0.1&t=t0g0yW5N089Opn7V-8&scaling=min-zoom&starting-point-node-id=1%3A2&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>BandLoveClub</h2>
-            <p>Figma prototype</p>
+            <p>Show off your favorite bands (prototype)</p>
             <img src="images/new-work/image-bandloveclub.png" />
           </a>
           <!--/ work -->
           <!-- work -->
-          <a class="work-item work-item--grid">
+          <a href="https://myperfectjob.club/" target="_blank" class="work-item work-item--grid">
             <h2>MyPerfectJob</h2>
-            <p>Side-project</p>
+            <p>An ideal role board, not a job board</p>
             <img src="images/new-work/image-myperfectjob.png" />
           </a>
           <!--/ work -->
         </div>
 
-      </div>
-
-      <!-- <div class="works" id="about">
-        <h3 class="heading mar-bot--32">About me</h3>
-        <h2 class="heading ibm l mar-bot--24">
-          I’m a full-stack product designer that solves customer and business problems with simple, efficient tooling, and I excel at taking an idea from 0 to usable thing.
-        </h2>
-        <p class="heading--lite body mar-bot--24">
-          I have 17+ years of UX/UI design, product, and development experience. In my career, I’ve worked across agencies, B2C, B2B, SaaS, and mental health.
-        </p>
-        <p class="heading--lite body mar-bot--80">
-          I craft 0-1 experiences and wear many hats to do so, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
-        </p>
-        <h3 class="heading body mar-bot--16">Links</h3>
-        <div class="links mar-bot--80">
-          <a href="https://www.linkedin.com/in/the-jeff-doan" target="_blank">LinkedIn</a>
-          <a href="https://github.com/jefffis?tab=repositories" target="_blank">GitHub</a>
-          <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
-          <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
-          <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
+        <div class="grid grid--2 grid-gap--32 mar-bot--32">
+          <!-- work -->
+          <a href="https://findnewsletters.com/" target="_blank" class="work-item work-item--grid">
+            <h2>Find Your Newsletter</h2>
+            <p>Newsletter directory, sold in 2023</p>
+            <img src="images/new-work/image-findnewsletters.png" />
+          </a>
+          <!--/ work -->
+          <!-- work -->
+          <a href="https://getsaasweekly.com/" target="_blank" class="work-item work-item--grid">
+            <h2>SaaS Weekly</h2>
+            <p>Weekly newsletter (sold in 2022)</p>
+            <img src="images/new-work/image-saas-weekly.png" />
+          </a>
+          <!--/ work -->
         </div>
-        <div class="body">
-          <h3 class="heading mar-bot--16">Skills</h3>
-          <ul class="skill-list grid grid--2">
-            <li>Product design</li>
-            <li>UX design</li>
-            <li>Design systems &amp; components</li>
-            <li>Product strategy &amp; prioritization</li>
-            <li>Presenting &amp; critique</li>
-            <li>UX research</li>
-            <li>UX writing</li>
-            <li>UI design</li>
-            <li>Business design</li>
-            <li>Growth design</li>
-            <li>Prototyping</li>
-            <li>Jobs-to-be-Done</li>
-            <li>Copywriting &amp; copy testing</li>
-            <li>Usability testing</li>
-            <li>Keyword research</li>
-            <li>Analytics &amp; data</li>
-            <li>A/B testing</li>
-            <li>Figma &amp; Storybook</li>
-            <li>HTML/CSS/JavaScript</li>
-            <li>Ruby/Rails/PHP</li>
-            <li>ChatGPT</li>
-            <li>Scrappy/getting sh*t done</li>
-          </ul>
-        </div> -->
+
+        <div class="grid grid--2 grid-gap--32 mar-bot--32">
+          <!-- work -->
+          <a href="https://producttrials.netlify.app/" target="_blank" class="work-item work-item--grid">
+            <h2>Product Trials</h2>
+            <p>Test your website &amp; product with a real person (alpha)</p>
+            <img src="images/new-work/image-product-trials.png" />
+          </a>
+          <!--/ work -->
+          <!-- work -->
+          <a href="https://www.figma.com/proto/64skZVodrVbCBnfedZZGo8/Tourin'?page-id=0%3A1&type=design&node-id=1377-209&viewport=1185%2C504%2C0.12&t=Nk7HNEKR4s8K7tpV-8&scaling=min-zoom&starting-point-node-id=1377%3A209&hide-ui=1/" target="_blank" class="work-item work-item--grid">
+            <h2>Tourin&rsquo;</h2>
+            <p>Community concert video sharing (protoype)</p>
+            <img src="images/new-work/image-tourin.png" />
+          </a>
+          <!--/ work -->
+        </div>
+
+      </div>
 
     </main>
 
