--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="more/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/me--new.jpg" type="image/x-icon" />
 
     <script>
       document.addEventListener("touchstart", function(){},false);
@@ -48,7 +48,7 @@
         <p class="body">I’ve created &amp; streamlined design systems, reduce churn, increase trial &amp; paid sign ups, optimize feature adoption, set up research &amp; testing processes, create feedback loops, and more. <em>How can I help you?</em></p>
       </div>
 
-      <div class="works" id="work">
+      <div class="works featured" id="work">
         <h3 class="heading mar-bot--40">Impactful work</h3>
         <!-- <p class=" mar-bot--40">Selected recent work by Jeff</p> -->
         
@@ -73,6 +73,14 @@
           <h2>Lead Product Designer, Thriveworks</h2>
           <p>Increased first-session show rate 30%, decreased client cancels by 8%, decreased insurance billing issues 20%, and reduced clinician churn by 21%. (coming soon)</p>
           <img src="images/tc-dashboard.png" />
+        </a>
+        <!--/ work -->
+
+        <!-- work -->
+        <a class="work-item soon">
+          <h2>Product Designer, Tradesy</h2>
+          <p>Increased time on site and conversions 10%, optimized customer support agent productivity. (coming soon)</p>
+          <img src="more/img/self-service.png" />
         </a>
         <!--/ work -->
 
@@ -118,6 +126,23 @@
 
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
           <!-- work -->
+          <a href="https://wtf.jefff.co/Tradesy-Comps/mobile-filters/iframe.html" target="_blank" class="work-item work-item--grid">
+            <h2>Tradesy: Mobile web</h2>
+            <p>A better filtering experience (prototype)</p>
+            <img src="more/img/tradesy-filters.gif" />
+          </a>
+          <!--/ work -->
+          <!-- work -->
+          <a href="https://systemic.netlify.app/" target="_blank" class="work-item work-item--grid">
+            <h2>Systemic</h2>
+            <p>A design system for your email (alpha)</p>
+            <img src="images/new-work/image-systemic.png" />
+          </a>
+          <!--/ work -->
+        </div>
+
+        <div class="grid grid--2 grid-gap--32 mar-bot--32">
+          <!-- work -->
           <a href="https://www.figma.com/proto/ZcUE8PQgAcTRQqMHI6JXDn/BandLoveClub?page-id=0%3A1&type=design&node-id=1-2&viewport=396%2C507%2C0.1&t=t0g0yW5N089Opn7V-8&scaling=min-zoom&starting-point-node-id=1%3A2&hide-ui=1" target="_blank" class="work-item work-item--grid">
             <h2>BandLoveClub</h2>
             <p>Show off your favorite bands (prototype)</p>
@@ -127,7 +152,7 @@
           <!-- work -->
           <a href="https://myperfectjob.club/" target="_blank" class="work-item work-item--grid">
             <h2>MyPerfectJob</h2>
-            <p>An ideal role board, not a job board</p>
+            <p>An ideal role board, not a job board (beta)</p>
             <img src="images/new-work/image-myperfectjob.png" />
           </a>
           <!--/ work -->
@@ -137,7 +162,7 @@
           <!-- work -->
           <a href="https://findnewsletters.com/" target="_blank" class="work-item work-item--grid">
             <h2>Find Your Newsletter</h2>
-            <p>Newsletter directory, sold in 2023</p>
+            <p>Newsletter directory (sold in 2023)</p>
             <img src="images/new-work/image-findnewsletters.png" />
           </a>
           <!--/ work -->
@@ -165,6 +190,17 @@
             <img src="images/new-work/image-tourin.png" />
           </a>
           <!--/ work -->
+        </div>
+
+        <div class="grid grid--2 grid-gap--32 mar-bot--32">
+          <!-- work -->
+          <a href="https://wtf.jefff.co/getbetalist/" target="_blank" class="work-item work-item--grid">
+            <h2>Betalist</h2>
+            <p>Build better products, make more money (alpha)</p>
+            <img src="images/new-work/image-betalist.png" />
+          </a>
+          <!--/ work -->
+          <!-- work --><!--/ work -->
         </div>
 
       </div>
