--- a/sw.html
+++ b/sw.html
@@ -14,7 +14,7 @@
     <meta property='og:image' content='/images/social-image.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" href="more/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/me--new.jpg" type="image/x-icon" />
 
     <script>
       document.addEventListener("touchstart", function(){},false);
