--- a/all-work.html
+++ b/all-work.html
@@ -11,7 +11,7 @@
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
     <meta property='og:description' content='My collection of work, musings on product design, email design, and other web-related thingamajigs.' />
-    <meta property='og:image' content='/images/social-image.png' />
+    <meta property='og:image' content='/images/social-image--new.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="images/me--new.jpg" type="image/x-icon" />
