--- a/healme.html
+++ b/healme.html
@@ -11,7 +11,7 @@
     <meta property='og:type' content='website' />
     <meta property='og:title' content='made by Jeff' />
     <meta property='og:description' content='A deep-dive case-study on the work I have been leading as the Head of Design at Heal.me' />
-    <meta property='og:image' content='/images/social-image.png' />
+    <meta property='og:image' content='/images/social-image--new.png' />
 
     <link href="stylesheets/app.css" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="images/me--new.jpg" type="image/x-icon" />
