--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           I’m Jeff, a product, growth, and business designer.
         </h1>
         <!-- <p class="body mar-bot--32">I enjoy designing for conversion, driving customer & business value, optimizing onboarding to be effective, and simplifying pains with better tooling. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p> -->
-        <p class="body">I’ve created &amp; streamlined design systems, reduce churn, increase trial &amp; paid sign ups, optimize feature adoption, set up research &amp; testing processes, create feedback loops, and more. <em>How can I help you?</em></p>
+        <p class="body">I’ve created &amp; streamlined design systems, reduce churn, increased trial &amp; paid sign ups, optimized feature adoption, set up research &amp; testing processes, created feedback loops, and more. <em>How can I help you?</em></p>
       </div>
 
       <div class="works featured" id="work">
