--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </div>
 
       <div class="works" id="links">
-        <h3 class="heading mar-bot--40">Figma links, prototypes, side-projects, etc.</h3>
+        <h3 class="heading mar-bot--40">Figma links, prototypes, side projects, etc.</h3>
         <!-- <p class="mar-bot--40">Figma prototypes, side-projects, writings.</p> -->
         
         <div class="grid grid--2 grid-gap--32 mar-bot--32">
