--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
           <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
           <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
           <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
+          <a href="https://www.goodreads.com/user/show/138126036-jeff-doan" target="_blank">goodreads</a>
         </div>
         <div class="body">
           <h3 class="heading mar-bot--16">Skills</h3>
@@ -107,6 +108,7 @@
             <a href="https://www.producthunt.com/@jefffis" target="_blank">ProductHunt</a>
             <a href="https://www.indiehackers.com/jefff" target="_blank">Indiehackers</a>
             <a href="https://www.instagram.com/jefffff/" target="_blank">Instagram</a>
+            <a href="https://www.goodreads.com/user/show/138126036-jeff-doan" target="_blank">goodreads</a>
           </div>
         </div>
       </footer>
