--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- work -->
         <a href="healme.html" class="work-item">
           <h2>Principal Product Designer, Heal.me</h2>
-          <p>Increased bookings & customer activations 20% MOM, increased revenue 15% MOM, increased customer adoption 20% MOM, lead strategy, research, and design for new features &amp; design system.</p>
+          <p>Increased bookings & customer activations 20% MOM, increased revenue 15% MOM, increased customer adoption 20% MOM, led strategy, research, and designed for new features &amp; design system.</p>
           <img src="images/healme--calendar.png" />
         </a>
         <!--/ work -->
