Add in Loom videos

--- a/healme.html
+++ b/healme.html
@@ -48,6 +48,7 @@
         <!-- <h3 class="heading heading--intro ibm mar-bot--32">Heal.me</h3> -->
         <h1 class="heading xl ibm mar-bot--32">Simpler workflows, better tools, more bookings.</h1>
         <ul class="tldr body mar-bot--32">
+          <li><strong>Increased customers from 3k to 4k in 3 months</strong></li>
           <li>Increased bookings &amp; customer activations 20% MOM</li>
           <li>Increased revenue 15% MOM</li>
           <li>Increased customer adoption 20% MOM</li>
@@ -55,7 +56,7 @@
           <li>Lead design system ongoing work</li>
         </ul>
         <div class="body no-decoration">
-          <p class="mar-bot--32"><a href="https://heal.me/" target="_blank">Heal.me</a> is an all-in-one toolkit for holistic practitioners to run their businesses. It&rsquo;s <em>also</em> a marketplace for clients to explore and book with thousands of practioners. I&rsquo;ve been leading the design and product efforts to drive more adoption of the saas product while improving the SEO and UX flows (<a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=1552%3A578&type=design&node-id=6120-25160&viewport=124%2C482%2C0.02&t=OnmkBpwtsAULiLVm-8&scaling=min-zoom&starting-point-node-id=6120%3A25160&hide-ui=1" target="_blank">desktop</a> and <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=105%3A198&type=design&node-id=6065-22297&viewport=306%2C260%2C0.03&t=jKowwjcvOX6WBatE-8&scaling=scale-down&starting-point-node-id=6065%3A22297&show-proto-sidebar=1&hide-ui=1" target="_blank">mobile</a> prototypes) for more clients to book flawlessly.</p>
+          <p class="mar-bot--40"><a href="https://heal.me/" target="_blank">Heal.me</a> is an all-in-one toolkit for holistic practitioners to run their businesses. It&rsquo;s <em>also</em> a marketplace for clients to explore and book with thousands of practioners. I&rsquo;ve been leading the design and product efforts to drive more adoption of the saas product while improving the SEO and UX flows (<a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=1552%3A578&type=design&node-id=6120-25160&viewport=124%2C482%2C0.02&t=OnmkBpwtsAULiLVm-8&scaling=min-zoom&starting-point-node-id=6120%3A25160&hide-ui=1" target="_blank">desktop</a> and <a href="https://www.figma.com/proto/YmnEJfb8t1TliCCMxobPID/Product-Design?page-id=105%3A198&type=design&node-id=6065-22297&viewport=306%2C260%2C0.03&t=jKowwjcvOX6WBatE-8&scaling=scale-down&starting-point-node-id=6065%3A22297&show-proto-sidebar=1&hide-ui=1" target="_blank">mobile</a> prototypes) for more clients to book flawlessly.</p>
           
           <!-- <hr class="designy" /> -->
           
@@ -72,6 +73,7 @@
               <li><strong>Role:</strong> Product design, research, data analysis, UX writing, product manager</li>
               <li><strong>Timeline:</strong> 4 weeks</li>
               <li><strong>Team:</strong> myself, CTO, CEO, 2 engineers, product specialist, marketing</li>
+              <li><strong>Tools:</strong> Figma, Intercom, Google Docs, Google Sheets, Google Analyics, Maze</li>
             </ul>
             <p>
               <strong>Problem Statement</strong>
@@ -136,11 +138,18 @@
               <li><strong>Learnings:</strong> We discovered a lot of high-value concepts in the design process, but ruthlessly prioritized and held true to the goal of making the product simpler and more efficient, which would help drive long-term adoption.</li>
               <li><strong>Improvements:</strong> We could have scoped this down a lot more from the get-go and released this sooner, however, the ideation process was also valuable for building the future roadmap out. The design system was the biggest hurdle but also the most valuable in the future for increasing velocity.</li>
             </ul>
-            <p>
+            <p class="mar-bot--40">
               <strong>Conclusion</strong>
               <br />
               The saas product is the main source of value for our customers (i.e. where they set up and run their businesses from) and by not making it more efficient, we were leaving thousands of dollars on the table through wasted sales efforts and churn. The design system was made specifically for our less-than-tech savvy customers, prioritized clarity and simplicity, and improved on critical workflows for maximizing our most important KPI, bookings.
             </p>
+            <h3 class="heading body mar-bot--8">Loom videos</h3>
+            <p class="micro mar-bot--16">See more context/details on all my Heal.me work</p>
+            <div class="links">
+              <a href="https://www.loom.com/share/c7e3a8758949420a88065a02fdd3d7b6?sid=403060ff-4e49-4160-85d9-777b878f9c06" target="_blank">Mobile app</a>
+              <a href="https://www.loom.com/share/c3c62f2c89284e2786ceaa33ce357728?sid=7655ad69-b849-47b1-8d57-d9cae5aee65d" target="_blank">Booking Widget (mobile)</a>
+              <a href="https://www.loom.com/share/ba59d35ac0fd4f96ad3d7196b988f287?sid=7b1ac461-c02b-4fe6-be3a-9236f9c51bfd" target="_blank">Booking Widget (desktop)</a>
+            </div>
           </div>
         </div>
         <!-- <p class="body mar-bot--32"><strong>What I did:</strong> UX research, UX writing, data analysis, visual design, prototyping, usability testing, product strategy &amp; prioritization, and more.</p>
