--- a/about.html
+++ b/about.html
@@ -71,6 +71,10 @@
             <li>UX research</li>
             <li>UX writing</li>
             <li>UI design</li>
+            <li>SaaS, B2B, B2C, DTC</li>
+            <li>Mobile web &amp; app design</li>
+            <li>Email design &amp; build</li>
+            <li>SMS &amp; push notif copywriting</li>
             <li>Business design</li>
             <li>Growth design</li>
             <li>Prototyping</li>
