Add in pitch deck stuff

--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@
             <li>Figma &amp; Storybook</li>
             <li>HTML/CSS/JavaScript</li>
             <li>Ruby/Rails/PHP</li>
+            <li>Pitch/Sales decks</li>
             <li>ChatGPT</li>
-            <li>Scrappy/getting sh*t done</li>
           </ul>
         </div>
       </div>
