--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
           </a>
           <!--/ work -->
           <!-- work -->
-          <a href="https://systemic.netlify.app/" target="_blank" class="work-item work-item--grid">
-            <h2>Systemic</h2>
-            <p>A design system for your email (alpha)</p>
-            <img src="images/new-work/image-systemic.png" />
+          <a href="https://www.figma.com/proto/cQ7SvQPgyPSOTPy0SCxfSG/Membership-Benefits?page-id=4801%3A14243&type=design&node-id=4801-14279&viewport=298%2C428%2C0.05&t=T8D4G1UM3Ieg6tro-8&scaling=min-zoom&hide-ui=1" target="_blank" class="work-item work-item--grid">
+            <h2>Heal.me: Pitch deck</h2>
+            <p>I rewrote &amp; redesigned our decks for better closing</p>
+            <img src="images/new-work/image-sales-deck.png" />
           </a>
           <!--/ work -->
         </div>
@@ -200,7 +200,13 @@
             <img src="images/new-work/image-betalist.png" />
           </a>
           <!--/ work -->
-          <!-- work --><!--/ work -->
+          <!-- work -->
+          <a href="https://systemic.netlify.app/" target="_blank" class="work-item work-item--grid">
+            <h2>Systemic</h2>
+            <p>A design system for your email (alpha)</p>
+            <img src="images/new-work/image-systemic.png" />
+          </a>
+          <!--/ work -->
         </div>
 
       </div>
