Add back in Highrise

--- a/highrise.html
+++ b/highrise.html
@@ -45,20 +45,32 @@
           Go back
         </a>
 
-        <h3 class="heading heading--intro ibm mar-bot--32">Highrise</h3>
         <h1 class="heading xl ibm mar-bot--32">Rethinking Tasks</h1>
-        <p class="body mar-bot--32"><strong>The problem:</strong> Overdue tasks are a huge point of pain for users of task systems everywhere. People love starting new task systems (Things, Asana, whatever), but once you start collecting old/overdue tasks people start throwing away/ignoring/starting over.</p>
-        <p class="body mar-bot--32"><strong>My solution:</strong> <em>Note: this was a design exercise, I put my best effort forth with all that I knew at the time.</em> That said, at a high-level, for Overdue tasks: break out the list into groupings based on their Category. Plus, add in bulk editing of tasks, giving the user a quick way to dismiss loads of tasks that are not critical, or might be long gone. You can also bulk update (i.e. adjust due dates, assingees, etc.) loads of tasks at the same time. Any time you add bulk editing for actions, you also need to add in undo support for these as well. Supporting mistakes in UI is critical to reducing anxiety around updating tasks. Along with these new additions to the overall system, I wanted to add in a Deleted view to allow for more power user support.</p>
-        <p class="body mar-bot--32"><strong>What I did:</strong> I researched, iterated, designed and built the front-end for this prototype.</p>
+        <p>
+          <img src="images/highrise.png" class="work-sample mar-bot--32" />
+          <!-- <div class="micro">Part of the design system I built from scratch</div> -->
+        </p>
+        <p class="body mar-bot--32">
+          <strong>The problem</strong>
+          <br />
+          Overdue tasks are a huge point of pain for users of task systems everywhere. People love starting new task systems, but once you start collecting old/overdue tasks people start throwing away/ignoring/starting over.</p>
+        <p class="body mar-bot--32">
+            <strong>My solution</strong>
+            <br />
+            <em>Note: this was a design exercise, I put my best effort forth with all the information available at the time.</em> That said, at a high-level, for Overdue tasks: break out the list into groupings based on their Category. Plus, add in bulk editing of tasks, giving the user a quick way to dismiss loads of tasks that are not critical, or might be long gone. You can also bulk update (i.e. adjust due dates, assingees, etc.) loads of tasks at the same time. Any time you add bulk editing for actions, you also need to add in undo support for these as well. Supporting mistakes in UI is critical to reducing anxiety around updating tasks. Along with these new additions to the overall system, I wanted to add in a Deleted view to allow for more power user support.</p>
+        <p class="body mar-bot--32">
+          <strong>What I did</strong>
+          <br />
+          I researched, iterated, designed and built the front-end for this prototype.</p>
         <a href="https://wtf.jefff.co/Highrise-comps/" target="_blank" class="btn btn--black ibm">View prototype</a>
       </div>
 
     </main>
       
-    <div class="work-container text--center">
+    <!-- <div class="work-container text--center">
       <img src="more/img/highrise/highrise.gif" class="mar-bot--8" />
       <p class="ibm">Desktop + tablet (mobile excluded)</p>
-    </div>
+    </div> -->
 
     <footer class="footer">
         <div class="container">
