--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@
         <!--/ work -->
 
         <!-- work -->
+        <a href="highrise.html" class="work-item">
+          <h2>Product Designer, Highrise</h2>
+          <p>Rethink Tasks (this was from a design challenge that got the me the job offer).</p>
+          <img src="images/highrise.png" />
+        </a>
+        <!--/ work -->
+
+        <!-- work -->
         <a class="work-item soon">
           <h2>Director of Growth Design, SimplePractice</h2>
           <p>Redesign and relaunched marketing site, increased paid accounts by 25%, increased trial sign ups by 15%, and increased lead-gen by 30%. (coming soon)</p>
