Add in process page:

--- a/design.html
+++ b/design.html
@@ -73,7 +73,7 @@
           <!-- q -->
             <h3 id="prototypes" class="body mar-bot--16">Please provide details around your experience creating and testing UX prototypes.</h3>
             <p>I’ve used InVision (RIP) way back when, but Figma is the standard now for creating prototypes. I’ve created myriad lo-fi wireframe prototypes and hi-fi fully designed ones for whatever the need is. If I am trying to articulate a concept, lo-fi is generally good enough, but I’ve found some types of personalities need to see hi-fi with real data to be able to grasp the concept.</p>
-            <p class="mar-bot--64">I work hand in hand with engineers often to help align around nuanced functionality / interactivity and prototyping is a lifesaver for this. I do also sometimes build HTML/CSS/JS prototypes when I find that Figma can’t quite do what I need it to do, and that’s very handy for engineers as well.</p>
+            <p class="mar-bot--64">I work hand-in-hand with engineers often to help align around nuanced functionality / interactivity and prototyping is a lifesaver for this. I do also sometimes build HTML/CSS/JS prototypes when I find that Figma can’t quite do what I need it to do, and that’s very handy for engineers as well.</p>
           <!--/ q -->
 
           <!-- q -->
@@ -98,8 +98,13 @@
 
           <!-- q -->
             <h3 id="testing" class="body mar-bot--16">Please provide details around your experience conducting user testing of design prototypes and synthesizing user feedback.</h3>
-            <p>I’ve used InVision (RIP) way back when, but Figma is the standard now, and I’ve used Usertesting.com and a few other platforms for creating and running the tests, but I prefer Maze.co now for ease-of-use and affordability. I typically define the type of test to run, as well as set them up and write the questions -- before going live I like to share with the rest of the team (not just design but all of product) to help poke holes and clarify questions before asking people to start.</p>
-            <p>After a test is run, I synthesize and share the results and if changes are warranted, then that’s the natural next step. I often also recruit the people for the tests, or at least define who we want to test with</p>
+            <p>Figma is my go to, and I’ve used Usertesting.com and a few other platforms for creating and running the tests, but I prefer Maze.co now for ease-of-use and affordability. I typically define the type of test to run, as well as set them up and write the questions -- before going live I like to share with the rest of the team (not just design but all of product) to help poke holes and clarify questions before asking people to start.</p>
+            <p class="mar-bot--64">After a test is run, I synthesize and share the results and if changes are warranted, then that’s the natural next step. I often also recruit the people for the tests, or at least define who we want to test with.</p>
+          <!--/ q -->
+
+          <!-- q -->
+            <h3 id="testing" class="body mar-bot--16">TLDR</h3>
+            <p>Design is all about the context of the problem/opportunity in front of you.</p>
           <!--/ q -->
           </p>
         </div>
