Add in process page:

--- a/design.html
+++ b/design.html
@@ -82,7 +82,7 @@
             <ul>
               <li>Competitive landscape</li>
               <li>Existing research</li>
-              <li>Customer feedback (support tickets, feature requests)</li>
+              <li>Customer feedback (support tickets, feature requests, interviews)</li>
               <li>Existing data (what’s working/not working, what do we want to make impact on)</li>
               <li>Design sprints, if time/resource permits</li>
               <li>Internal knowledge (working cross-functionally)</li>
@@ -104,7 +104,7 @@
 
           <!-- q -->
             <h3 id="testing" class="body mar-bot--16">TLDR</h3>
-            <p>Design is all about the context of the problem/opportunity in front of you.</p>
+            <p>Design is all about the context of the problem/opportunity in front of you. Sometimes you have more data, time, resources, etc. Other times, you use your best judgement and move forward. Real day-to-day work is never ideal, and you pull from your toolkit as best you can.</p>
           <!--/ q -->
           </p>
         </div>
