--- a/design.html
+++ b/design.html
@@ -43,7 +43,7 @@
       
       <div class="hero text--limit">
         <h1 class="heading xl ibm mar-bot--32">
-          As designers, we’re asked what our design process is. In my exerience, the only answer is &ldquo;it depends.&rdquo;
+          As designers, we’re asked what our design process is. In my experience, the only answer is &ldquo;it depends.&rdquo;
         </h1>
         <!-- <p class="body mar-bot--32">I enjoy designing for conversion, driving customer & business value, optimizing onboarding to be effective, and simplifying pains with better tooling. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p> -->
         <p class="heading--lite body mar-bot--24">
