--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         </h1>
         <!-- <p class="body mar-bot--32">I enjoy designing for conversion, driving customer & business value, optimizing onboarding to be effective, and simplifying pains with better tooling. I’m typically writing in Google Docs, on a call with a customer, working with engineers/PMs, pixeling in Figma, digging into data, or coding in Sublime Text.</p> -->
         <p class="heading--lite body mar-bot--24">
-          I have 17+ years of UX/UI design, product, and development experience. In my career, I’ve worked across agencies, B2C, B2B, SaaS, marketplaces, and mental health.
+          I have 17+ years of UX/UI design, product, and development experience. In my career, I’ve worked across agencies, B2C, B2B, SaaS, marketplaces, and mental health/health tech.
         </p>
         <p class="heading--lite body mar-bot--80">
           I craft 0-1 experiences and wear many hats to do so, and I thrive where I can make an impact. I’m a lover of garage rock and live shows, collecting vinyls, minivans, and colorful pants. I also enjoy reading, making art, being outside, and doing silly things with my daughter.
