--- a/about.html
+++ b/about.html
@@ -34,8 +34,9 @@
       <nav class="nav">
         <a class="nav--link active">About</a>
         <a href="design.html" class="nav--link">Process</a>
-<a href="jeff-doan-resume--2024.pdf" target="_blank" class="nav--link">Résumé</a>
-        <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link">Contact</a>
+<a href="jeff-doan-resume--2024.pdf" target="_blank" class="nav--link hide-for-small">Résumé</a>
+        <a href="reviews.html" class="nav--link">Reviews</a>
+        <a href="mailto:the.jeffdoan@gmail.com?subject=Come work for us please" class="nav--link hide-for-small">Contact</a>
       </nav>
     </header>
     
@@ -117,6 +118,11 @@
           </div>
         </div>
       </footer>
+
+      <!-- sticky CTA for mobile -->
+      <div class="sticky-cta">
+        <a href="jeff-doan-resume--2024.pdf" target="_blank" class="cta--link">View résumé</a>
+      </div>
 
     </div>
 
